--- a/index.html
+++ b/index.html
@@ -58,7 +58,32 @@
                 </div>
                 <h3>Aulas Disponibles</h3>
                 <!-- Consulta la lista completa de aulas, sus características y disponibilidad en tiempo real. -->
-
+                <table>
+                    <tr>
+                        <th>Aula</th>
+                        <th>Capacidad</th>
+                        <th>Recursos</th>
+                        <th>Disponibilidad</th>
+                    </tr>
+                    <tr>
+                        <td>Aula 101</td>
+                        <td>30</td>
+                        <td>Proyector, Pizarra</td>
+                        <td>Disponible</td>
+                    </tr>
+                    <tr>
+                        <td>Aula 202</td>
+                        <td>50</td>
+                        <td>Computadoras, Internet</td>
+                        <td>Ocupada</td>
+                    </tr>
+                    <tr>
+                        <td>Aula 303</td>
+                        <td>20</td>
+                        <td>Pizarra, Aire Acondicionado</td>
+                        <td>Disponible</td>
+                    </tr>
+                </table>
             </div>
             
             <div class="feature-card">
