--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Gestión de Aulas - Universidad</title>
+    <!-- INTEGRANTES DEL GRUPO -->
+     <!-- ANDERSON HERNANDEZ -->
+      <!-- DENNYS CARRETO -->
+       <!-- JAVIER ELIZONDO -->
 </head>
 <body>
     <header class="header">
@@ -82,6 +86,18 @@
                         <td>Aula 303</td>
                         <td>20</td>
                         <td>Pizarra, Aire Acondicionado</td>
+                        <td>Disponible</td>
+                    </tr>
+                                        <tr>
+                        <td>Aula 404</td>
+                        <td>40</td>
+                        <td>Proyector, Sonido</td>
+                        <td>Disponible</td>
+                    </tr>
+                    <tr>
+                        <td>Aula 505</td>
+                        <td>35</td>
+                        <td>Pizarra Digital</td>
                         <td>Disponible</td>
                     </tr>
                 </table>
